# jade

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  jade.cabal  subpar.cabal
.github/workflows/: haskell.yml
app/: Main.hs
bench/: bench.hs
src/: Jade.hs  Subpar.hs
src/Jade/: Expression.hs  Process.hs  Syntax.hs
src/Subpar/: Command.hs  Process.hs  Syntax.hs  Utility.hs
src/Subpar/Extra/: Monad.hs
test/: test.hs
