cabal-version:      2.4
name:               jade
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

bug-reports:        https://github.com/dopamane/jade/issues
license:            BSD-3-Clause
author:             dopamane
maintainer:         dwc1295@gmail.com

copyright:          David Cox 2022
-- category:
extra-source-files: CHANGELOG.md

executable jade
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.1.0,
                      text,
                      jade,
                      megaparsec
    hs-source-dirs:   app
    ghc-options: -Wall
    default-extensions: OverloadedStrings
    default-language: Haskell2010

library
  exposed-modules: Jade

  other-modules: Jade.Process,
                 Jade.Syntax

  build-depends: base,
                 process,
                 text,
                 megaparsec

  hs-source-dirs: src

  ghc-options: -Wall

  default-extensions: LambdaCase,
                      OverloadedStrings,
                      FlexibleContexts

  default-language: Haskell2010
