cabal-version:      2.4
name:               subpar
version:            0.1.0.0

synopsis:           SMT interface

-- A longer description of the package.
-- description:

bug-reports:        https://github.com/dopamane/subpar/issues
license:            BSD-3-Clause
author:             dopamane
maintainer:         dwc1295@gmail.com

copyright:          David Cox 2022
category:           SMT, Formal Methods, Theorem Provers, Math, System
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/dopamane/subpar

executable subpar
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    other-extensions: OverloadedStrings,
                      LambdaCase
    build-depends:    attoparsec,
                      base >=4.14.1.0,
                      bytestring,
                      subpar
    hs-source-dirs:   app
    ghc-options: -Wall
    default-language: Haskell2010

library
  exposed-modules: Subpar

  other-modules: Subpar.Process,
                 Subpar.Syntax

  build-depends: attoparsec,
                 base,
                 hedgehog,
                 process,
                 bytestring,

  hs-source-dirs: src

  ghc-options: -Wall
  other-extensions: OverloadedStrings,
                    StrictData,
                    TemplateHaskell,
                    ViewPatterns
  default-extensions: LambdaCase

  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0

  main-is: test.hs

  build-depends: base,
                 hedgehog,
                 subpar

  ghc-options: -Wall -threaded -O2

  hs-source-dirs: test

  default-language: Haskell2010
