cabal-version:      2.4
name:               subpar
version:            0.1.0.0
synopsis:           SMT interface
description:        SMT-LIB v2.6
bug-reports:        https://github.com/dopamane/subpar/issues
license:            BSD-3-Clause
author:             dopamane
maintainer:         dwc1295@gmail.com
copyright:          David Cox 2022-2024
category:           SMT, Formal Methods, Theorem Provers, Math, System
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/dopamane/subpar

library
  exposed-modules:  Subpar
  other-modules:    Subpar.Process,
                    Subpar.Syntax
  build-depends:    attoparsec,
                    base,
                    deepseq,
                    process,
                    bytestring >= 0.11.2.0,
  hs-source-dirs:   src
  ghc-options:      -Wall -O2
  other-extensions: DeriveAnyClass,
                    DeriveGeneric,
                    OverloadedStrings,
                    StrictData,
                    TemplateHaskell,
                    ViewPatterns
  default-language: Haskell2010

library subpar-extra
  exposed-modules:  Subpar,
                    Subpar.Extra.Monad,
                    Subpar.Process,
                    Subpar.Syntax
  build-depends:    attoparsec,
                    base,
                    bytestring,
                    deepseq,
                    hedgehog,
                    mtl,
                    process,
                    subpar
  hs-source-dirs:   src
  ghc-options:      -Wall -O2
  default-language: Haskell2010

library subpar-utility
  exposed-modules:  Subpar.Utility
  build-depends:    base,
                    directory,
                    filepath,
                    unix
  hs-source-dirs:   src
  ghc-options:      -Wall -O2
  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          test.hs
  build-depends:    attoparsec,
                    base,
                    bytestring,
                    directory,
                    filepath,
                    hedgehog,
                    HUnit,
                    process,
                    subpar-extra,
                    subpar-utility
  ghc-options:      -Wall -threaded -O2
  hs-source-dirs:   test
  default-language: Haskell2010

benchmark bench
  type:             exitcode-stdio-1.0
  main-is:          bench.hs
  hs-source-dirs:   bench
  ghc-options:      -Wall -O2
  build-depends:    base,
                    criterion,
                    subpar-extra,
                    subpar-utility
  default-language: Haskell2010
